app properties configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#Global configuration
 spring.application.name=vlille-tracker
+
+#Tomcat configuration
+server.port=9001
+
+#Log level configuration
+logging.level.root = ERROR
+logging.level.com.vlilletracker = DEBUG
+logging.level.org.springframework.boot.web.embedded.tomcat = INFO
+
+com.vlilletracker.producer.apiURL = https://opendata.lillemetropole.fr/api/explore/v2.1/catalog/datasets/vlille-realtime/records?limit=20
+com.vlilletracker.producer.applicationDesignation=VlilleTrackerProducer
