--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Global configuration
-spring.application.name=vlille-tracker
+spring.application.name=vlille-tracker-producer
 
 #Tomcat configuration
 server.port=9001
