--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ logging.level.org.springframework.boot.web.embedded.tomcat = INFO
 
 com.vlilletracker.producer.apiURL = https://opendata.lillemetropole.fr/api/explore/v2.1/catalog/datasets/vlille-realtime/records?limit=20
 com.vlilletracker.producer.applicationDesignation=VlilleTrackerProducer
+
+spring.kafka.bootstrap-servers = 172.20.64.1:9092
