trigger kafka message production for every dataset update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=9001
 
 #Log level configuration
 logging.level.root = ERROR
-logging.level.com.vlilletracker = DEBUG
+logging.level.com.vlilletracker = INFO
 logging.level.org.springframework.boot.web.embedded.tomcat = INFO
 
 com.vlilletracker.producer.apiURL = https://opendata.lillemetropole.fr/api/explore/v2.1/catalog/datasets/vlille-realtime/records?limit=20
