update url without hardcoded query param

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ logging.level.root = ERROR
 logging.level.com.vlilletracker = INFO
 logging.level.org.springframework.boot.web.embedded.tomcat = INFO
 
-com.vlilletracker.producer.apiURL = https://opendata.lillemetropole.fr/api/explore/v2.1/catalog/datasets/vlille-realtime/records?limit=20
+com.vlilletracker.producer.apiURL = https://opendata.lillemetropole.fr/api/explore/v2.1/catalog/datasets/vlille-realtime/records
 com.vlilletracker.producer.applicationDesignation=VlilleTrackerProducer
 
-spring.kafka.bootstrap-servers = 172.20.64.1:9092
+spring.kafka.bootstrap-servers = 172.28.48.1:9092
