--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ logging.level.root = ERROR
 logging.level.com.vlilletracker = INFO
 logging.level.org.springframework.boot.web.embedded.tomcat = INFO
 
+com.vlilletracker.producer.maxNumberOfResultPerPing = 100
 com.vlilletracker.producer.apiURL = https://opendata.lillemetropole.fr/api/explore/v2.1/catalog/datasets/vlille-realtime/records
 com.vlilletracker.producer.applicationDesignation=VlilleTrackerProducer
 
