simplify kafka configuration on startup with env variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,6 @@ com.vlilletracker.producer.maxNumberOfResultPerPing = 100
 com.vlilletracker.producer.apiURL = https://opendata.lillemetropole.fr/api/explore/v2.1/catalog/datasets/vlille-realtime/records
 com.vlilletracker.producer.applicationDesignation=VlilleTrackerProducer
 
-spring.kafka.bootstrap-servers = 172.28.48.1:9092
+#Kafka configuration
+spring.kafka.bootstrap-servers = ${LOCAL_IP}:9092
+kafka.topicName = vlille
