--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>vlille-tracker-producer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>vlille-tracker</name>
-	<description>Test Kafka with VLille Dataset</description>
+	<description>Production des mises à jour du dataset VLille d'Ilevia dans un topic Kafka</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
